--- a/client/pom.xml
+++ b/client/pom.xml
@@ -25,6 +25,11 @@
             <artifactId>unirest-java</artifactId>
             <version>1.4.8</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10</version>
+        </dependency>
 
     </dependencies>
     <build>
